src/test/deca/syntax/invalid/SansObjet/WhileVar.deca
//Description
//  while comme nom de variable
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input 'while'

{
    int while = 0;
}